--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "@anyvan-ui/checkbox": "file:.yalc/@anyvan-ui/checkbox",
-    "@anyvan-ui/fonts": "file:.yalc/@anyvan-ui/fonts",
-    "@anyvan-ui/icons": "file:.yalc/@anyvan-ui/icons",
-    "@anyvan-ui/modal": "workspace:*",
-    "@anyvan-ui/theme": "file:.yalc/@anyvan-ui/theme",
+    "@anyvan-ui/button": "^0.4.2-alpha.8",
+    "@anyvan-ui/modal": "^0.3.1-alpha.5",
+    "@anyvan-ui/theme": "^0.2.1-alpha.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
@@ -30,5 +28,6 @@
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
